Make sure the 'says:' in comments is readable by a screen-reader

--- a/less/content/comments.less
+++ b/less/content/comments.less
@@ -48,7 +48,7 @@
 }
 
 .says {
-	display: none;
+	&:extend(.screen-reader-text);
 }
 
 .bypostauthor .comment-meta .fn:after {
